[gd_scene load_steps=11 format=4 uid="uid://dy24s42glgktx"]

[ext_resource type="Texture2D" uid="uid://bq1dap6gjpxr7" path="res://Map_Icons/7SEYHd.png" id="1_jgce8"]
[ext_resource type="PackedScene" uid="uid://c6spn0m6m85vs" path="res://Player/player_camera.tscn" id="2_if10o"]
[ext_resource type="Texture2D" uid="uid://dd7pttur0tvh4" path="res://Map_Icons/train_set.png" id="2_pp1l7"]
[ext_resource type="Script" path="res://Map/Europe.gd" id="3_oilk6"]
[ext_resource type="PackedScene" uid="uid://ow347jchu8vi" path="res://Gui/tile_window.tscn" id="4_xt2tf"]
[ext_resource type="PackedScene" uid="uid://denddx5f87r3r" path="res://Map/rail_placer.tscn" id="6_4lcrx"]
[ext_resource type="PackedScene" uid="uid://s7iqd4d70g3r" path="res://Cargo/cargo_controller.tscn" id="7_nl1l5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tywjw"]
texture = ExtResource("1_jgce8")
margins = Vector2i(0, 64)
separation = Vector2i(0, 64)
texture_region_size = Vector2i(128, 128)
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 1
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 1
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 1
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 1
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 2
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 2
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 2
7:1/0 = 0
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rvwug"]
texture = ExtResource("2_pp1l7")
margins = Vector2i(0, 64)
separation = Vector2i(0, 64)
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 3
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 3
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 3
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_hlajd"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(128, 115)
terrain_set_0/mode = 1
terrain_set_0/terrain_0/name = "City"
terrain_set_0/terrain_0/color = Color(0.31802, 0.31802, 0.31802, 1)
terrain_set_0/terrain_1/name = "Lush"
terrain_set_0/terrain_1/color = Color(0, 0.978064, 0.0863627, 1)
terrain_set_0/terrain_2/name = "Normal"
terrain_set_0/terrain_2/color = Color(0.46875, 0.5, 0.25, 1)
terrain_set_0/terrain_3/name = "Straight"
terrain_set_0/terrain_3/color = Color(0.375, 0.5, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_tywjw")
sources/2 = SubResource("TileSetAtlasSource_rvwug")

[node name="Europe" type="TileMapLayer"]
use_parent_material = true
position = Vector2(2, 168)
tile_map_data = PackedByteArray("AAD2//r/AQAAAAAAAAD2//v/AQABAAAAAAD2//z/AQAAAAAAAAD1//z/AQAAAAAAAAD2//3/AQAAAAAAAAD1//3/AQAAAAAAAAD1//7/AQAAAAAAAAD1////AQADAAEAAAD0/wAAAQADAAEAAAD1/wAAAQAAAAEAAAD0/wEAAQADAAEAAAD2/wAAAQAAAAAAAAD2/wEAAQADAAEAAAD2/wIAAQAAAAAAAAD2/wMAAQAAAAAAAAD2/wQAAQAAAAAAAAD2/wUAAQAAAAAAAAD3/wQAAQABAAAAAAD4/wQAAQAAAAAAAAD4/wUAAQABAAAAAAD5/wUAAQAGAAEAAAD6/wYAAQAGAAEAAAD7/wYAAQAGAAEAAAD8/wYAAQADAAAAAAD8/wcAAQAGAAEAAAD9/wYAAQADAAAAAAD+/wYAAQAAAAAAAAD//wUAAQADAAAAAAAAAAUAAQADAAAAAAABAAUAAQADAAAAAAABAAQAAQAAAAAAAAACAAUAAQADAAAAAAADAAQAAQADAAAAAAAEAAUAAQAGAAEAAAAFAAQAAQAGAAEAAAAGAAQAAQAGAAEAAAAGAAMAAQAGAAEAAAAHAAIAAQAGAAEAAAAIAAIAAQAGAAEAAAAJAAEAAQAGAAEAAAAJAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAAJAP//AQAGAAEAAAAJAP7/AQAAAAAAAAAJAP3/AQAAAAAAAAD2//n/AQAAAAAAAAD2//j/AQABAAAAAAD1//f/AQAAAAAAAAD2//f/AQABAAAAAAD1//b/AQAAAAAAAAD2//b/AQAAAAAAAAD3//b/AQAAAAAAAAD4//b/AQAAAAAAAAD5//b/AQAAAAAAAAD6//b/AQAAAAAAAAD7//b/AQADAAAAAAD8//b/AQAAAAAAAAD9//b/AQAEAAEAAAD9//X/AQAAAAAAAAD+//b/AQAEAAEAAAD///X/AQAAAAAAAAAAAPb/AQAEAAEAAAABAPX/AQAEAAEAAAACAPb/AQAEAAEAAAADAPX/AQAAAAAAAAAEAPb/AQAEAAAAAAAFAPX/AQAEAAAAAAAGAPb/AQAFAAAAAAAHAPX/AQAFAAAAAAAIAPX/AQAEAAAAAAAJAPX/AQAFAAAAAAAKAPX/AQADAAAAAAALAPX/AQADAAAAAAAMAPX/AQAEAAAAAAANAPX/AQAFAAAAAAAOAPX/AQADAAAAAAAPAPT/AQAGAAEAAAAJAPv/AQADAAEAAAAJAPr/AQAEAAEAAAAKAPr/AQADAAEAAAALAPn/AQADAAEAAAAMAPn/AQAAAAAAAAANAPj/AQAAAAAAAAAOAPj/AQAAAAAAAAAPAPf/AQADAAAAAAAQAPf/AQADAAAAAAAQAPb/AQADAAAAAAAQAPX/AQAGAAEAAAARAPT/AQAGAAEAAAAQAPT/AQAGAAEAAAD3//r/AQAEAAAAAAD3//n/AQAEAAAAAAD4//r/AQAEAAAAAAD5//n/AQACAAAAAAD6//r/AQABAAAAAAD7//r/AQAAAAAAAAD8//r/AQAGAAEAAAD8//v/AQAGAAEAAAD8//z/AQAGAAEAAAD7//z/AQAAAAAAAAD7//3/AQAAAAAAAAD7//7/AQADAAAAAAD7////AQADAAAAAAD7/wAAAQAAAAAAAAD7/wEAAQAGAAEAAAD7/wIAAQAGAAEAAAD7/wMAAQABAAAAAAD6/wQAAQABAAAAAAD7/wQAAQAGAAEAAAD6/wUAAQAGAAEAAAD7/wUAAQAGAAEAAAAEAPX/AQADAAAAAAAEAPT/AQAAAAAAAAAEAPP/AQAAAAAAAAAFAPL/AQABAAAAAAAEAPL/AQABAAAAAAAFAPH/AQAAAAAAAAAFAPD/AQABAAAAAAAFAO//AQABAAAAAAAGAO//AQABAAAAAAAFAO7/AQABAAAAAAAGAO7/AQAAAAAAAAAGAO3/AQAAAAAAAAAGAOz/AQAAAAAAAAAFAOv/AQAAAAAAAAAFAOr/AQAAAAAAAAAEAOr/AQAAAAAAAAAEAOn/AQAAAAAAAAADAOn/AQAAAAAAAAADAOj/AQAAAAAAAAACAOj/AQAAAAAAAAABAOf/AQAAAAAAAAAAAOf/AQAAAAAAAAD//+b/AQAAAAAAAAD+/+b/AQAAAAAAAAD9/+b/AQAAAAAAAAD9/+X/AQABAAAAAAD8/+b/AQAAAAAAAAD7/+X/AQAAAAAAAAD6/+X/AQAAAAAAAAD6/+T/AQAAAAAAAAD6/+P/AQAAAAAAAAD7/+P/AQAAAAAAAAD7/+L/AQAAAAAAAAD8/+P/AQAAAAAAAAD9/+L/AQAAAAAAAAD+/+L/AQAAAAAAAAD//+L/AQAAAAAAAAAAAOL/AQAAAAAAAAABAOL/AQAAAAAAAAACAOP/AQAGAAEAAAADAOL/AQAAAAAAAAAEAOP/AQAAAAAAAAAFAOL/AQAAAAAAAAAEAOL/AQAAAAAAAAAFAOH/AQAAAAAAAAAEAOH/AQAAAAAAAAAFAOD/AQAAAAAAAAAFAN//AQAAAAAAAAAGAN//AQAAAAAAAAAGAOD/AQAAAAAAAAAHAN//AQAAAAAAAAAHAOD/AQAAAAAAAAAIAOH/AQAAAAAAAAAJAOD/AQAAAAAAAAAJAOH/AQAAAAAAAAAKAOH/AQAAAAAAAAALAOD/AQAGAAAAAAAMAOH/AQAGAAAAAAAMAOD/AQAAAAAAAAANAN//AQAGAAAAAAAOAN//AQAGAAAAAAAPAN7/AQAAAAAAAAAVAN3/AQABAAAAAAARAPP/AQAAAAAAAAARAPL/AQABAAAAAAASAPL/AQABAAAAAAATAPH/AQAAAAAAAAAUAPH/AQAAAAAAAAAVAPH/AQAAAAAAAAAVAPL/AQAGAAEAAAAWAPL/AQAGAAEAAAAWAPP/AQAGAAEAAAAXAPL/AQAGAAEAAAAXAPP/AQAGAAEAAAAYAPP/AQAGAAEAAAAZAPP/AQAAAAAAAAAaAPP/AQAAAAAAAAAbAPL/AQABAAAAAAAcAPP/AQABAAAAAAAcAPL/AQADAAAAAAAdAPL/AQABAAAAAAAdAPH/AQAEAAAAAAAeAPL/AQADAAEAAAAeAPH/AQAFAAAAAAAeAPD/AQAFAAAAAAAdAO//AQAEAAAAAAAeAO//AQAFAAAAAAAdAO7/AQADAAAAAAAeAO7/AQAFAAAAAAAeAO3/AQAFAAAAAAAdAOz/AQADAAAAAAAdAOv/AQAEAAAAAAAcAOz/AQABAAAAAAAbAOv/AQAAAAAAAAAaAOz/AQAAAAAAAAAZAOv/AQAAAAAAAAAZAOr/AQAAAAAAAAAZAOn/AQABAAAAAAAaAOn/AQABAAAAAAAbAOj/AQABAAAAAAAcAOj/AQABAAAAAAAcAOf/AQABAAAAAAAcAOb/AQADAAAAAAAdAOX/AQADAAAAAAAdAOT/AQADAAAAAAAeAOT/AQAAAAAAAAAeAOP/AQAAAAAAAAAeAOL/AQAAAAAAAAAdAOH/AQAAAAAAAAAcAOH/AQAAAAAAAAAbAOD/AQABAAAAAAAaAOD/AQABAAAAAAAZAN//AQABAAAAAAAYAN//AQAAAAAAAAAXAN7/AQABAAAAAAAWAN7/AQABAAAAAAAQAN7/AQAAAAAAAAAQAN3/AQAAAAAAAAAQANz/AQAAAAAAAAAQANv/AQAAAAAAAAARANr/AQAAAAAAAAASANr/AQAAAAAAAAATANn/AQAAAAAAAAATANr/AQAAAAAAAAATANv/AQAAAAAAAAAUANz/AQAAAAAAAAAVANz/AQAAAAAAAAACAPv/AQAEAAEAAAADAPr/AQAGAAEAAAAFAPn/AQAEAAEAAAAGAPn/AQAEAAEAAAAHAPj/AQAEAAEAAAAIAPj/AQAEAAEAAAAJAPf/AQABAAAAAAAKAPf/AQADAAAAAAALAPb/AQAFAAAAAAAMAPb/AQAFAAAAAAAMAPf/AQAEAAAAAAANAPb/AQAFAAAAAAAOAPb/AQAFAAAAAAAPAPX/AQADAAAAAAAPAPb/AQAEAAAAAAAOAPf/AQADAAAAAAANAPf/AQADAAAAAAAMAPj/AQAAAAAAAAALAPf/AQADAAAAAAAKAPj/AQABAAAAAAAJAPj/AQABAAAAAAAIAPn/AQAEAAEAAAAHAPn/AQAGAAEAAAAEAPv/AQAGAAEAAAABAPv/AQAEAAEAAAAEAPn/AQAEAAEAAAAFAPj/AQAGAAEAAAAGAPj/AQAGAAEAAAAHAPf/AQABAAAAAAAIAPf/AQADAAAAAAAJAPb/AQAEAAAAAAAKAPb/AQAFAAAAAAAIAPb/AQAFAAAAAAAHAPb/AQAEAAAAAAAGAPf/AQADAAAAAAAFAPb/AQAEAAAAAAAEAPf/AQAAAAAAAAADAPb/AQAEAAEAAAACAPf/AQAEAAEAAAABAPb/AQAEAAEAAAAAAPf/AQAEAAEAAAD///b/AQAEAAEAAAD+//f/AQAEAAEAAAD9//f/AQAAAAAAAAD8//f/AQAAAAAAAAD7//f/AQAAAAAAAAD6//f/AQADAAAAAAD5//f/AQABAAAAAAD4//f/AQADAAAAAAD3//f/AQABAAAAAAD3//j/AQABAAAAAAD4//j/AQADAAAAAAD4//n/AQACAAAAAAD5//j/AQABAAAAAAD6//j/AQABAAAAAAD6//n/AQABAAAAAAD7//j/AQAAAAAAAAD8//j/AQAAAAAAAAD8//n/AQAGAAEAAAD9//j/AQAGAAEAAAD+//j/AQAGAAEAAAD///f/AQAGAAEAAAD///j/AQAGAAEAAAAAAPj/AQAGAAEAAAABAPf/AQAGAAEAAAABAPj/AQAEAAEAAAACAPj/AQAEAAEAAAADAPf/AQAGAAEAAAADAPj/AQAEAAEAAAAEAPj/AQAGAAEAAAAFAPf/AQAGAAEAAAACAPn/AQAEAAEAAAABAPn/AQAEAAEAAAAAAPn/AQAEAAEAAAD///n/AQAEAAEAAAD+//n/AQAGAAEAAAD9//n/AQAGAAEAAAD9//r/AQAEAAEAAAD+//r/AQAEAAEAAAD+//v/AQAEAAEAAAD///r/AQAEAAEAAAAAAPr/AQAGAAEAAAD+//z/AQAEAAEAAAD9//v/AQAEAAEAAAD9//z/AQAEAAEAAAD8//7/AQAAAAAAAAD9//3/AQAGAAEAAAAJAPn/AQABAAAAAAAKAPn/AQAAAAAAAAALAPj/AQADAAEAAAD9//7/AQAFAAAAAAD8////AQADAAAAAAD8/wAAAQAAAAAAAAADAP7/AQAAAAAAAAAEAP7/AQAGAAEAAAAEAP//AQAAAAAAAAADAP//AQAGAAEAAAAAAAEAAQAGAAEAAAD8/wEAAQAAAAAAAAD8/wIAAQAAAAAAAAD9/wEAAQAGAAEAAAD+/wEAAQAAAAAAAAD+/wIAAQAAAAAAAAD//wEAAQAAAAAAAAD//wIAAQAGAAEAAAAAAAIAAQAGAAEAAAABAAEAAQAGAAEAAAACAAEAAQAGAAEAAAADAAAAAQAGAAEAAAAEAAAAAQAAAAAAAAAFAP//AQAGAAEAAAAGAP//AQAEAAEAAAAIAP//AQAAAAAAAAAHAP//AQAGAAEAAAAGAAAAAQAEAAEAAAAFAAAAAQABAAAAAAAEAAEAAQADAAAAAAADAAEAAQADAAAAAAACAAIAAQAAAAAAAAABAAIAAQAAAAAAAAAAAAMAAQAGAAEAAAD//wMAAQAGAAEAAAD+/wMAAQAGAAEAAAD9/wIAAQAAAAAAAAD8/wMAAQAGAAEAAAD8/wQAAQAAAAAAAAD9/wMAAQAAAAAAAAD9/wQAAQAGAAEAAAD+/wQAAQAGAAEAAAD+/wUAAQAGAAEAAAD//wQAAQAGAAEAAAAAAAQAAQAGAAEAAAABAAMAAQAGAAEAAAACAAMAAQADAAAAAAADAAIAAQADAAAAAAAEAAIAAQADAAAAAAAFAAEAAQABAAAAAAAGAAEAAQAAAAAAAAAHAAAAAQAEAAEAAAAIAAAAAQAGAAEAAAAIAAEAAQAEAAEAAAAHAAEAAQAEAAEAAAAGAAIAAQAEAAEAAAAFAAIAAQAEAAEAAAAEAAMAAQAGAAEAAAADAAMAAQAGAAEAAAACAAQAAQADAAAAAAAEAAQAAQAGAAEAAAAFAAMAAQAEAAEAAAD9/wUAAQADAAAAAAD8/wUAAQAGAAEAAAD7//n/AQAAAAAAAAD4////AQAAAAAAAAD5//7/AQAAAAAAAAD6//7/AQAAAAAAAAD6//3/AQAAAAAAAAD6//z/AQAAAAAAAAD7//v/AQAAAAAAAAD6//v/AQABAAAAAAD5//r/AQABAAAAAAD4//v/AQACAAAAAAD3//v/AQABAAAAAAD3//z/AQAAAAAAAAD4//z/AQABAAAAAAD5//v/AQABAAAAAAD5//z/AQAAAAAAAAD4//3/AQADAAAAAAD3//3/AQAAAAAAAAD2//7/AQAAAAAAAAD2////AQAAAAAAAAD3//7/AQADAAAAAAD4//7/AQADAAAAAAD3////AQADAAAAAAD3/wAAAQAAAAAAAAD4/wAAAQAAAAAAAAD5////AQAAAAAAAAD6////AQADAAAAAAD6/wAAAQAAAAAAAAD5/wAAAQAAAAAAAAD4/wEAAQAAAAAAAAD3/wEAAQAAAAAAAAD3/wIAAQAAAAAAAAD4/wIAAQABAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQAGAAEAAAD6/wIAAQAGAAEAAAD5/wIAAQABAAAAAAD4/wMAAQAAAAAAAAD3/wMAAQAAAAAAAAD5/wMAAQABAAAAAAD6/wMAAQABAAAAAAD5/wQAAQAAAAAAAAAMAOz/AQAAAAAAAAANAOv/AQAAAAAAAAAOAOv/AQAAAAAAAAAPAOr/AQAAAAAAAAAQAOr/AQAAAAAAAAARAOn/AQAAAAAAAAASAOn/AQABAAAAAAATAOj/AQAAAAAAAAAUAOj/AQABAAAAAAAVAOf/AQAAAAAAAAAWAOf/AQAAAAAAAAAXAOb/AQAAAAAAAAAYAOb/AQAAAAAAAAAZAOX/AQAAAAAAAAAaAOX/AQAAAAAAAAAbAOT/AQAAAAAAAAAcAOT/AQAAAAAAAAAdAOP/AQAAAAAAAAAdAOL/AQAAAAAAAAAcAOL/AQAAAAAAAAAbAOH/AQABAAAAAAAaAOH/AQABAAAAAAAZAOD/AQABAAAAAAAYAOD/AQAAAAAAAAAXAN//AQAAAAAAAAAWAN//AQAAAAAAAAAVAN7/AQAAAAAAAAAUAN7/AQAGAAEAAAAUAN3/AQAAAAAAAAATANz/AQAGAAEAAAASANz/AQAAAAAAAAASANv/AQAAAAAAAAARANv/AQAAAAAAAAARANz/AQAAAAAAAAARAN3/AQAAAAAAAAASAN3/AQAAAAAAAAASAN7/AQAGAAEAAAATAN3/AQAGAAEAAAATAN7/AQAEAAEAAAASAN//AQAGAAEAAAARAN7/AQAGAAEAAAAQAN//AQAAAAAAAAAPAN//AQAAAAAAAAAOAOD/AQAAAAAAAAANAOD/AQAAAAAAAAANAOH/AQAGAAAAAAAOAOH/AQAAAAAAAAAPAOD/AQAAAAAAAAAQAOD/AQAGAAEAAAARAN//AQAEAAEAAAARAOD/AQAGAAEAAAASAOD/AQAGAAEAAAATAN//AQAGAAEAAAAUAN//AQAGAAEAAAAUAOD/AQAAAAAAAAAVAN//AQAAAAAAAAAVAOD/AQAAAAAAAAAWAOD/AQAAAAAAAAAWAOH/AQAAAAAAAAAXAOD/AQAAAAAAAAAXAOH/AQAAAAAAAAAYAOH/AQABAAAAAAAYAOL/AQABAAAAAAAZAOH/AQABAAAAAAAZAOL/AQAAAAAAAAAaAOL/AQAAAAAAAAAaAOP/AQAAAAAAAAAbAOL/AQAAAAAAAAAbAOP/AQAAAAAAAAAcAOP/AQAAAAAAAAAaAOT/AQAAAAAAAAAZAOP/AQABAAAAAAAYAOP/AQAAAAAAAAAXAOL/AQAAAAAAAAAWAOL/AQABAAAAAAAVAOH/AQABAAAAAAAUAOH/AQAAAAAAAAATAOD/AQAGAAEAAAASAOH/AQAGAAEAAAARAOH/AQAGAAEAAAAQAOH/AQAGAAEAAAAPAOH/AQAAAAAAAAAOAOL/AQAAAAAAAAANAOL/AQAGAAAAAAAMAOL/AQAAAAAAAAALAOH/AQAAAAAAAAAKAOL/AQAAAAAAAAAJAOL/AQAAAAAAAAAIAOL/AQAAAAAAAAAHAOH/AQAAAAAAAAAGAOH/AQAAAAAAAAAGAOL/AQAAAAAAAAAGAOP/AQAAAAAAAAAHAOL/AQAAAAAAAAAHAOP/AQAAAAAAAAAIAOP/AQABAAAAAAAIAOT/AQAAAAAAAAAJAOP/AQABAAAAAAAKAOP/AQABAAAAAAALAOL/AQAAAAAAAAALAOP/AQAAAAAAAAAMAOP/AQAAAAAAAAAMAOT/AQAGAAEAAAANAOP/AQAAAAAAAAAOAOP/AQAGAAAAAAAPAOL/AQAAAAAAAAAQAOL/AQAAAAAAAAAQAOP/AQAAAAAAAAARAOL/AQAAAAAAAAASAOL/AQAAAAAAAAATAOH/AQAAAAAAAAATAOL/AQAAAAAAAAAUAOL/AQAAAAAAAAAUAOP/AQAAAAAAAAAVAOL/AQAAAAAAAAAVAOP/AQAAAAAAAAAWAOP/AQAAAAAAAAAWAOT/AQAAAAAAAAAXAOP/AQAAAAAAAAAXAOT/AQABAAAAAAAYAOT/AQABAAAAAAAYAOX/AQAAAAAAAAAZAOT/AQAAAAAAAAAXAOX/AQABAAAAAAAWAOX/AQAAAAAAAAAVAOT/AQAAAAAAAAAUAOT/AQADAAEAAAATAOP/AQAAAAEAAAASAOP/AQADAAEAAAARAOP/AQAGAAAAAAAQAOT/AQAGAAAAAAAPAOP/AQAGAAAAAAAOAOT/AQAAAAAAAAANAOT/AQAGAAEAAAAMAOX/AQAGAAEAAAALAOT/AQAGAAEAAAAKAOT/AQAGAAEAAAAJAOT/AQAAAAAAAAAIAOX/AQAGAAEAAAAHAOT/AQAGAAEAAAAGAOT/AQAAAAAAAAAFAOP/AQAAAAAAAAAEAOT/AQAGAAEAAAADAOP/AQAGAAEAAAACAOT/AQAGAAEAAAABAOP/AQAAAAAAAAAAAOP/AQAAAAAAAAD//+P/AQABAAAAAAD+/+P/AQAAAAAAAAD9/+P/AQAAAAAAAAD8/+T/AQAAAAAAAAD7/+T/AQAAAAAAAAD8/+X/AQAAAAAAAAD9/+T/AQABAAAAAAD+/+T/AQAAAAAAAAD+/+X/AQAAAAAAAAD//+T/AQAAAAAAAAAAAOT/AQAAAAAAAAAAAOX/AQABAAAAAAABAOT/AQAAAAAAAAABAOX/AQAAAAAAAAACAOX/AQAGAAEAAAADAOT/AQAGAAEAAAADAOX/AQAGAAEAAAAEAOX/AQAGAAEAAAAFAOT/AQAGAAEAAAAFAOX/AQAGAAEAAAAGAOX/AQAEAAEAAAAGAOb/AQAGAAEAAAAHAOX/AQAEAAEAAAAHAOb/AQAGAAEAAAAIAOb/AQAGAAEAAAAJAOX/AQAGAAEAAAAKAOX/AQAGAAEAAAAKAOb/AQAGAAEAAAALAOX/AQAGAAEAAAALAOb/AQAGAAEAAAAMAOb/AQAAAAAAAAANAOX/AQAAAAAAAAAOAOX/AQAAAAAAAAAPAOT/AQAAAAAAAAAPAOX/AQAAAAAAAAAQAOX/AQAAAAAAAAARAOT/AQADAAEAAAASAOT/AQAGAAAAAAASAOX/AQADAAEAAAATAOT/AQAGAAAAAAATAOX/AQAGAAAAAAAUAOX/AQADAAEAAAAUAOb/AQAGAAAAAAAVAOX/AQAAAAAAAAAVAOb/AQAAAAAAAAAWAOb/AQAAAAAAAAAUAOf/AQAAAAAAAAATAOb/AQAAAAAAAAASAOb/AQAAAAAAAAARAOX/AQAAAAAAAAAQAOb/AQAAAAAAAAAPAOb/AQAAAAAAAAAOAOb/AQAAAAAAAAANAOb/AQAAAAAAAAAMAOf/AQAAAAAAAAALAOf/AQAGAAEAAAAKAOf/AQAGAAEAAAAJAOb/AQAGAAEAAAAIAOf/AQAGAAEAAAAHAOf/AQAGAAEAAAAGAOf/AQAGAAEAAAAFAOb/AQAGAAEAAAAEAOb/AQAGAAEAAAADAOb/AQAAAAAAAAACAOb/AQAAAAAAAAABAOb/AQABAAAAAAAAAOb/AQAAAAAAAAD//+X/AQABAAAAAAACAOf/AQABAAAAAAADAOf/AQAAAAAAAAAEAOf/AQAAAAAAAAAEAOj/AQABAAAAAAAFAOf/AQAAAAAAAAAFAOj/AQAAAAAAAAAGAOj/AQAAAAAAAAAGAOn/AQAAAAAAAAAHAOj/AQAAAAAAAAAIAOj/AQAGAAEAAAAJAOf/AQAEAAEAAAAJAOj/AQAGAAEAAAAKAOj/AQAGAAEAAAAKAOn/AQAGAAEAAAALAOj/AQAGAAEAAAAMAOj/AQAAAAAAAAANAOf/AQAAAAAAAAAOAOf/AQAAAAAAAAAOAOj/AQAAAAAAAAAPAOf/AQABAAAAAAAQAOf/AQABAAAAAAARAOb/AQAAAAAAAAARAOf/AQABAAAAAAASAOf/AQAAAAAAAAASAOj/AQAAAAAAAAATAOf/AQAAAAAAAAARAOj/AQAAAAAAAAAQAOj/AQAAAAAAAAAPAOj/AQABAAAAAAAOAOn/AQAAAAAAAAANAOj/AQAAAAAAAAAMAOn/AQAAAAAAAAALAOn/AQAGAAEAAAAKAOr/AQAGAAEAAAAJAOn/AQAEAAEAAAAIAOn/AQAGAAEAAAAHAOn/AQAAAAAAAAAGAOr/AQAAAAAAAAAFAOn/AQAAAAAAAAAGAOv/AQAAAAAAAAAHAOr/AQAAAAAAAAAIAOr/AQAGAAEAAAAIAOv/AQAGAAEAAAAJAOr/AQAGAAEAAAAJAOv/AQAEAAEAAAAKAOv/AQAGAAEAAAALAOr/AQAAAAAAAAAMAOr/AQAAAAAAAAANAOn/AQAAAAAAAAANAOr/AQAAAAAAAAAOAOr/AQAAAAAAAAAPAOn/AQABAAAAAAAQAOn/AQABAAAAAAAMAOv/AQAAAAAAAAALAOv/AQAGAAEAAAAKAOz/AQAGAAEAAAAJAOz/AQAGAAEAAAAIAOz/AQAAAAAAAAAHAOv/AQAAAAAAAAAHAOz/AQAAAAAAAAAHAO3/AQAAAAAAAAAIAO3/AQAAAAAAAAAIAO7/AQAAAAAAAAAJAO3/AQAAAAAAAAAKAO3/AQAGAAEAAAALAOz/AQAGAAEAAAALAO3/AQAAAAAAAAAMAO3/AQAAAAAAAAANAOz/AQAAAAAAAAAOAOz/AQAAAAAAAAAPAOv/AQAAAAAAAAAQAOv/AQAAAAAAAAARAOr/AQAAAAAAAAASAOr/AQAAAAAAAAATAOn/AQAAAAAAAAAUAOn/AQAAAAAAAAAVAOj/AQAAAAAAAAAWAOj/AQAAAAAAAAAXAOf/AQAAAAAAAAAYAOf/AQAAAAAAAAAZAOb/AQAAAAAAAAAaAOb/AQAAAAAAAAAbAOX/AQAAAAAAAAAcAOX/AQAAAAAAAAAbAOb/AQAAAAAAAAAaAOf/AQABAAAAAAAZAOf/AQABAAAAAAAYAOj/AQABAAAAAAAXAOj/AQAAAAAAAAAWAOn/AQAAAAAAAAAVAOn/AQAAAAAAAAAUAOr/AQAAAAAAAAATAOr/AQAAAAAAAAASAOv/AQAAAAAAAAARAOv/AQAAAAAAAAAQAOz/AQAAAAAAAAAPAOz/AQAAAAAAAAAOAO3/AQAAAAAAAAANAO3/AQAAAAAAAAAMAO7/AQABAAAAAAALAO7/AQAAAAAAAAAKAO7/AQAAAAAAAAAJAO7/AQAAAAAAAAAIAO//AQAAAAAAAAAHAO7/AQAAAAAAAAAHAO//AQABAAAAAAAGAPD/AQAAAAAAAAAGAPH/AQAAAAAAAAAHAPD/AQAAAAAAAAAIAPD/AQABAAAAAAAJAO//AQAAAAAAAAAKAO//AQAGAAEAAAAKAPD/AQAGAAEAAAALAO//AQAGAAEAAAAMAO//AQABAAAAAAANAO7/AQABAAAAAAAOAO7/AQAAAAAAAAAPAO3/AQAAAAAAAAAQAO3/AQAAAAAAAAARAOz/AQAAAAAAAAASAOz/AQAAAAAAAAATAOv/AQAAAAAAAAAUAOv/AQAGAAEAAAAVAOr/AQAAAAAAAAAWAOr/AQAAAAAAAAAXAOn/AQABAAAAAAAYAOn/AQABAAAAAAAZAOj/AQABAAAAAAAaAOj/AQAAAAAAAAAbAOf/AQABAAAAAAAYAOr/AQABAAAAAAAXAOr/AQAAAAAAAAAWAOv/AQAGAAEAAAAVAOv/AQAGAAEAAAAUAOz/AQAGAAEAAAATAOz/AQAAAAAAAAASAO3/AQAAAAAAAAARAO3/AQAAAAAAAAAQAO7/AQAAAAAAAAAPAO7/AQAAAAAAAAAOAO//AQABAAAAAAANAO//AQABAAAAAAAMAPD/AQAAAAAAAAALAPD/AQAGAAEAAAAKAPH/AQAGAAEAAAAJAPD/AQAAAAAAAAAIAPH/AQABAAAAAAAHAPH/AQAAAAAAAAAGAPL/AQABAAAAAAAGAPP/AQAAAAAAAAAHAPL/AQABAAAAAAAIAPL/AQABAAAAAAAJAPH/AQAGAAEAAAAJAPL/AQAGAAEAAAAKAPL/AQAGAAEAAAALAPH/AQAGAAEAAAAMAPH/AQAGAAEAAAANAPD/AQABAAAAAAAOAPD/AQABAAAAAAAPAO//AQABAAAAAAAQAO//AQAAAAAAAAARAO7/AQAAAAAAAAASAO7/AQAAAAAAAAATAO3/AQAAAAAAAAAUAO3/AQAGAAEAAAAVAOz/AQAEAAEAAAAWAOz/AQAGAAEAAAAXAOv/AQAAAAAAAAAYAOv/AQAAAAAAAAAYAOz/AQAAAAAAAAAXAOz/AQAAAAAAAAAWAO3/AQAGAAEAAAAVAO3/AQAGAAEAAAAUAO7/AQAGAAEAAAATAO7/AQAAAAAAAAASAO//AQAAAAAAAAARAO//AQAAAAAAAAAQAPD/AQAAAAAAAAAPAPD/AQABAAAAAAAOAPH/AQABAAAAAAANAPH/AQAAAAAAAAAMAPL/AQAGAAEAAAALAPL/AQAGAAEAAAAKAPP/AQAGAAEAAAAJAPP/AQAGAAEAAAAIAPP/AQAAAAAAAAAHAPP/AQAAAAAAAAAGAPT/AQAAAAAAAAAFAPP/AQAAAAAAAAAFAPT/AQADAAAAAAAGAPX/AQAFAAAAAAAHAPT/AQADAAAAAAAIAPT/AQAAAAAAAAAJAPT/AQADAAAAAAAKAPT/AQAGAAEAAAALAPP/AQAGAAEAAAAMAPP/AQAGAAEAAAANAPL/AQAGAAEAAAAOAPL/AQAAAAAAAAAPAPH/AQAAAAAAAAAQAPH/AQABAAAAAAARAPD/AQABAAAAAAASAPD/AQABAAAAAAATAO//AQABAAAAAAAUAO//AQABAAAAAAAVAO7/AQAAAAAAAAAWAO7/AQAAAAAAAAAXAO3/AQAAAAAAAAAYAO3/AQAAAAAAAAAZAOz/AQAAAAAAAAAZAO3/AQAAAAAAAAAaAO3/AQAAAAAAAAAbAOz/AQAAAAAAAAAbAO3/AQABAAAAAAAcAO3/AQABAAAAAAAcAO7/AQABAAAAAAAdAO3/AQADAAAAAAAbAO7/AQABAAAAAAAaAO7/AQAAAAAAAAAZAO7/AQAAAAAAAAAYAO7/AQAAAAAAAAAXAO7/AQAAAAAAAAAWAO//AQAAAAAAAAAVAO//AQAAAAAAAAAUAPD/AQADAAAAAAATAPD/AQADAAAAAAASAPH/AQADAAAAAAARAPH/AQABAAAAAAAQAPL/AQAAAAAAAAAPAPL/AQAAAAAAAAAOAPP/AQAGAAEAAAANAPP/AQAGAAEAAAAMAPT/AQAGAAEAAAALAPT/AQAGAAEAAAANAPT/AQADAAAAAAAOAPT/AQAGAAEAAAAPAPP/AQAGAAEAAAAQAPP/AQAAAAAAAAAVAPD/AQAAAAAAAAAWAPD/AQAAAAAAAAAXAO//AQAAAAAAAAAYAO//AQAAAAAAAAAYAPD/AQAAAAAAAAAZAO//AQAAAAAAAAAaAO//AQAAAAAAAAAaAPD/AQABAAAAAAAbAO//AQAAAAAAAAAcAO//AQADAAAAAAAcAPD/AQADAAAAAAAbAPD/AQAAAAAAAAAaAPH/AQABAAAAAAAZAPD/AQAAAAAAAAAYAPH/AQAGAAEAAAAXAPD/AQAAAAAAAAAWAPH/AQAGAAEAAAAXAPH/AQAGAAEAAAAYAPL/AQAGAAEAAAAZAPH/AQAGAAEAAAAZAPL/AQAAAAAAAAAaAPL/AQABAAAAAAAbAPH/AQAAAAAAAAAcAPH/AQADAAAAAAAdAPD/AQAEAAAAAAADAPT/AQAGAAAAAAACAPX/AQAGAAAAAAABAPT/AQAGAAAAAAAAAPX/AQAGAAAAAAD///T/AQAGAAAAAAD+//X/AQAGAAAAAAD9//T/AQAGAAAAAAD8//X/AQAGAAAAAAD7//X/AQAGAAAAAAD6//X/AQAGAAAAAAD5//X/AQAGAAAAAAD4//X/AQAGAAAAAAD3//X/AQAGAAAAAAD2//X/AQAGAAAAAAD1//X/AQAGAAAAAAD0//b/AQAGAAAAAADz//b/AQAGAAAAAAD0//f/AQAGAAAAAADz//f/AQAGAAAAAAD0//j/AQAGAAAAAAD1//j/AQAGAAAAAAD1//n/AQAGAAAAAAD1//r/AQAGAAAAAAD1//v/AQAGAAAAAAD0//z/AQAGAAAAAAD0//3/AQAGAAAAAAD0//7/AQAGAAAAAADz//7/AQAGAAAAAAD0////AQAGAAAAAADz////AQAGAAAAAADz/wAAAQAGAAAAAADz/wEAAQAGAAAAAADz/wIAAQAGAAAAAAD0/wIAAQAGAAAAAAD1/wEAAQAGAAAAAAD1/wIAAQAGAAAAAAD1/wMAAQAGAAAAAAD1/wQAAQAGAAAAAAD1/wUAAQAGAAAAAAD1/wYAAQAGAAAAAAD2/wYAAQAGAAAAAAD3/wYAAQAGAAAAAAD3/wUAAQAGAAAAAAD4/wYAAQAGAAAAAAD5/wYAAQAGAAAAAAD6/wcAAQAGAAAAAAD7/wcAAQAGAAAAAAD8/wgAAQAGAAAAAAD9/wgAAQAGAAAAAAD9/wcAAQAGAAAAAAD+/wgAAQAGAAAAAAD+/wcAAQAGAAAAAAD//wcAAQAGAAAAAAD//wYAAQAGAAAAAAAAAAcAAQAGAAAAAAAAAAYAAQAGAAAAAAABAAYAAQAGAAAAAAACAAYAAQAGAAAAAAADAAUAAQAGAAAAAAAEAAYAAQAGAAAAAAAFAAYAAQAGAAAAAAAGAAYAAQAGAAAAAAAGAAUAAQAGAAAAAAAHAAUAAQAGAAAAAAAHAAQAAQAGAAAAAAAIAAUAAQAGAAAAAAAFAAUAAQAGAAAAAAAHAAMAAQAGAAAAAAAIAAMAAQAGAAAAAAAJAAIAAQAGAAAAAAAKAAIAAQAGAAAAAAAKAAEAAQAGAAAAAAAJAPz/AQAGAAAAAAAKAPz/AQAGAAAAAAAKAPv/AQAGAAAAAAALAPr/AQAGAAAAAAAMAPr/AQAGAAAAAAANAPn/AQAGAAAAAAAOAPn/AQAGAAAAAAAPAPj/AQAGAAAAAAAQAPj/AQAGAAAAAAARAPf/AQAGAAAAAAARAPb/AQAGAAAAAAASAPb/AQAGAAAAAAARAPX/AQAGAAAAAAASAPX/AQAGAAAAAAASAPT/AQAGAAAAAAASAPP/AQAGAAAAAAATAPL/AQAGAAAAAAAUAPL/AQAGAAAAAAAUAPP/AQAGAAAAAAAVAPP/AQAGAAAAAAAWAPT/AQAGAAAAAAAXAPT/AQAGAAAAAAAYAPT/AQAGAAAAAAAZAPT/AQAGAAAAAAAaAPT/AQAGAAAAAAAbAPP/AQAGAAAAAAAcAPT/AQAGAAAAAAAdAPP/AQAGAAAAAAAeAPP/AQAGAAAAAAAfAPP/AQAGAAAAAAAfAPL/AQAGAAAAAAADAPP/AQAGAAAAAAADAPL/AQAGAAAAAAADAPH/AQAGAAAAAAAEAPH/AQAGAAAAAAAEAPD/AQAGAAAAAAAEAO//AQAGAAAAAAAEAO7/AQAGAAAAAAAFAO3/AQAGAAAAAAAFAOz/AQAGAAAAAAAEAO3/AQAGAAAAAAAEAOz/AQAGAAAAAAAEAOv/AQAGAAAAAAADAOr/AQAGAAAAAAACAOr/AQAGAAAAAAACAOn/AQAGAAAAAAABAOj/AQAGAAAAAAAAAOj/AQAGAAAAAAD//+f/AQAGAAAAAAD+/+f/AQAGAAAAAAD9/+f/AQAGAAAAAAD8/+f/AQAGAAAAAAD7/+b/AQAGAAAAAAD6/+b/AQAGAAAAAAD5/+X/AQAGAAAAAAD5/+T/AQAGAAAAAAD5/+P/AQAGAAAAAAD5/+L/AQAGAAAAAAD6/+L/AQAGAAAAAAD7/+H/AQAGAAAAAAD8/+L/AQAGAAAAAAD9/+H/AQAGAAAAAAD+/+H/AQAGAAAAAAD//+H/AQAGAAAAAAAAAOH/AQAGAAAAAAABAOH/AQAGAAAAAAACAOL/AQAGAAAAAAADAOH/AQAGAAAAAAADAOD/AQAGAAAAAAAEAOD/AQAGAAAAAAAEAN//AQAGAAAAAAAFAN7/AQAGAAAAAAAGAN7/AQAGAAAAAAAHAN7/AQAGAAAAAAAIAN//AQAGAAAAAAAIAOD/AQAGAAAAAAAJAN//AQAGAAAAAAAKAOD/AQAGAAAAAAALAN//AQAGAAAAAAAMAN//AQAGAAAAAAANAN7/AQAGAAAAAAAOAN7/AQAGAAAAAAAPAN3/AQAGAAAAAAAPANz/AQAGAAAAAAAPANv/AQAGAAAAAAAPANr/AQAGAAAAAAAQANr/AQAGAAAAAAARANn/AQAGAAAAAAASANn/AQAGAAAAAAATANj/AQAGAAAAAAAdAOb/AQAGAAEAAAAeAOX/AQAAAAAAAAAfAOP/AQAAAAAAAAAfAOL/AQAAAAAAAAAfAOT/AQAGAAEAAAD9////AQADAAAAAAD+////AQADAAAAAAAAAP//AQAAAAAAAAACAP//AQAGAAEAAAACAAAAAQAGAAEAAAABAAAAAQAGAAEAAAAAAAAAAQAHAAAAAAD//wAAAQAGAAEAAAD9/wAAAQAAAAAAAAD/////AQAAAAAAAAABAP//AQAGAAEAAAAFAP3/AQAGAAEAAAAGAP3/AQAAAAAAAAAHAP3/AQAAAAAAAAAIAP3/AQADAAEAAAAFAPz/AQAGAAEAAAAFAPv/AQAGAAEAAAAFAPr/AQAEAAEAAAAGAPr/AQAEAAEAAAAGAPv/AQAEAAEAAAAGAPz/AQAEAAEAAAAHAPv/AQAGAAEAAAAHAPr/AQAGAAEAAAAIAPr/AQAGAAEAAAAIAPv/AQAGAAEAAAAHAPz/AQAGAAEAAAAIAPz/AQADAAEAAAAFAP7/AQAGAAEAAAAGAP7/AQAEAAEAAAAHAP7/AQAEAAEAAAAIAP7/AQAEAAEAAAAAAPz/AQAGAAEAAAALAAAAAQAGAAAAAAALAP//AQAGAAAAAAALAP7/AQAGAAAAAAAEAPz/AQAGAAEAAAAEAP3/AQAEAAEAAAAKAP3/AQAGAAAAAAAKAP7/AQAGAAAAAAAKAP//AQAAAAAAAAABAPz/AQAGAAEAAAACAPz/AQAEAAEAAAADAPz/AQAEAAEAAAACAP3/AQAAAAAAAAACAP7/AQAAAAAAAAABAP7/AQAAAAAAAAAAAP7/AQAAAAAAAAD///3/AQAAAAAAAAADAPv/AQAEAAEAAAADAP3/AQAAAAAAAAD///7/AQAFAAAAAAD+//7/AQAAAAAAAAABAP3/AQADAAAAAAD+//3/AQAGAAEAAAD///z/AQAGAAEAAAD///v/AQAGAAEAAAAAAPv/AQAGAAEAAAABAPr/AQAEAAEAAAACAPr/AQAGAAEAAAADAPn/AQAEAAEAAAAEAPr/AQAEAAEAAAAAAP3/AQAAAAEAAAD+/wAAAQAAAAAAAAD5//3/AQAAAAAAAAD8//3/AQAGAAEAAAA=")
tile_set = SubResource("TileSet_hlajd")
script = ExtResource("3_oilk6")

[node name="player_camera" parent="." instance=ExtResource("2_if10o")]

[node name="tile_window" parent="." instance=ExtResource("4_xt2tf")]
auto_translate_mode = 1

[node name="Rail_Placer" parent="." instance=ExtResource("6_4lcrx")]

[node name="cargo_controller" parent="." instance=ExtResource("7_nl1l5")]
